--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,6 +1,10 @@
 <html>
 <body>
 <div>
+    <form action="/logout" method="post">
+    <input type="submit" value="Sign Out"/>
+</form></div>
+<div>
     <form method="post">
         <input type="text" name="text" placeholder="Введите сообщение"/>
         <input type="text" name="tag" placeholder="Тэг"/>
